--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<h1 class="text-center bio" style="color: white;">Biodata Diri </h1>
 		<br>
 		<div class="row">
-			<div class="col-md-5">
+			<div class="col-sm-5">
 				<img src="img/Pas Foto.jpg" class="foto rounded-circle mt-3">
 			</div>
 			<div class="col-md-7">
