--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<!-- Navbar -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container">
-	  <a class="navbar-brand" href="#">My Biodata</a>
+	  <a class="navbar-brand disabled">My Biodata</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	  <div class="collapse navbar-collapse justify-content" id="navbarNavAltMarkup">
 	    <div class="navbar-nav">
 	      <a class="nav-link" href="#">Beranda <span class="sr-only">(current)</span></a>
 	      <a class="nav-link" href="#">Data Diri</a>
@@ -52,11 +52,14 @@
 	<div class="container">
 		<h1 class="text-center bio" style="color: white;">Biodata Diri </h1>
 		<br>
-		<div class="row">
-			<div class="col-sm-5">
+		<div class="row justify-content-md-center">
+			<div class="col-md-5">
+			<div class="container">
 				<img src="img/Pas Foto.jpg" class="foto rounded-circle mt-3">
 			</div>
+			</div>
 			<div class="col-md-7">
+			<div class="container baris1-1">
 			<table border="0" cellspacing="0" cellpadding="7" class="teks">
 				<tr>
 					<td>Nama</td>
@@ -90,20 +93,24 @@
 				</tr>
 			</table>
 			</div>
+			</div>
 		</div>
 	</div>
 	</div>
 	<!-- Akhir Biodata diri -->
 	<br>
 	<!-- Tentang Saya -->
-	<div class="row">
-		<div class="col">
-			<div class="baris2">
-				
+	<div class="container">
+		<div class="row">
+		<div class="col-md-5">
+			<h1 class="mb-4"><b>Tentang Saya</h1></b>
+			<p class="teks1">Mahasiswa teknik Informatika tingkat akhir di STT BANDUNG. Memiliki pengalaman sebagai operator di perusahaan manufacturing wire harness selama 4 tahun.</p>
+		</div>	
+			<div class="col-md-7">
+				<img src="img/NDA.jpg" class="foto1">				
 			</div>
 		</div>
 	</div>
-
 	<!-- Akhir Tentang saya -->
 
 
